--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "request": "^2.81.0"
+    "fs": "0.0.1-security",
+    "readline": "^1.3.0"
   },
   "deprecated": false,
   "description": "HomeBridge Sensirion SPS30 Air Quality Sensor",
