--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "bundleDependencies": false,
   "dependencies": {
     "fs": "0.0.1-security",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "moment": "^0.0.0"
   },
   "deprecated": false,
   "description": "HomeBridge Sensirion SPS30 Air Quality Sensor",
