--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "readline": "^1.3.0",
-    "moment": "^0.0.0"
+    "moment": "^0.0.0",
+    "fakegato-history": "^0.0.0"
   },
   "deprecated": false,
   "description": "HomeBridge Sensirion SPS30 Air Quality Sensor",
